--- a/dat-d3/stylesheet.css
+++ b/dat-d3/stylesheet.css
@@ -8,3 +8,8 @@
 		font-family: sans-serif;
 		font-size: 11px;
 	}
+	#labels text{
+		font-family: sans-serif;
+		font-size: 11px;
+		color: #222;
+	}
